--- a/app/globals.css
+++ b/app/globals.css
@@ -2,25 +2,25 @@
 
 :root {
   --background: #ffffff;
-  --foreground: #171717;
+  --foreground: #0e0f0e;
 }
 
-@theme inline {
-  --color-background: var(--background);
-  --color-foreground: var(--foreground);
-  --font-sans: var(--font-geist-sans);
-  --font-mono: var(--font-geist-mono);
+@font-face {
+  font-family: "robobold";
+  src: url(./fonts//robobold.ttf);
+
 }
 
-@media (prefers-color-scheme: dark) {
-  :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
-  }
+@font-face {
+  font-family: 'robolight';
+  src: url(./fonts//robolightt.ttf);
 }
 
 body {
-  background: var(--background);
-  color: var(--foreground);
-  font-family: Arial, Helvetica, sans-serif;
+  @apply bg-gradient-to-b dark:from-[#0e0f0e] dark:via-[#1e2916] dark:to-[#161616] from-[#f4f4f4] via-[#d7e8cc] to-[#eaeaea] h-screen font-[robobold]
+}
+
+.container {
+  @apply w-full max-w-[1240px] mx-auto px-4;
+  @apply sm:px-6 lg:px-8;
 }
