--- a/app/globals.css
+++ b/app/globals.css
@@ -16,6 +16,10 @@
   src: url(./fonts//robolightt.ttf);
 }
 
+.robo-light{
+  font-family: robolight;
+}
+
 body {
   @apply bg-gradient-to-b dark:from-[#0e0f0e] dark:via-[#1e2916] dark:to-[#161616] from-[#f4f4f4] via-[#d7e8cc] to-[#eaeaea] h-screen font-[robobold]
 }
