--- a/app/globals.css
+++ b/app/globals.css
@@ -21,7 +21,7 @@
 }
 
 body {
-  @apply min-h-screen bg-gradient-to-b  from-[#0e0f0e] via-[#1e2916] to-[#161616] font-[robobold];
+  @apply min-h-screen bg-gradient-to-b from-[#0e0f0e] via-[#1e2916] to-[#161616] font-[robobold];
 }
 
 .container {
@@ -31,4 +31,8 @@ body {
 
 nextjs-portal {
   display: none !important;
+}
+
+.sertificat {
+  background-image: url('./sevenedu.png') !important;
 }
