--- a/app/globals.css
+++ b/app/globals.css
@@ -25,7 +25,7 @@ body {
 }
 
 .container {
-  @apply w-full max-w-[440] mx-auto px-5;
+  @apply w-full max-w-[1240px] mx-auto px-5;
   @apply sm:px-6 lg:px-8;
 }
 
